--- a/create-account.html
+++ b/create-account.html
@@ -93,7 +93,7 @@
         const errorMessage = document.getElementById('error-message');
 
         // Typewriter effect for welcome message
-        const message = "Welcome to Issaerium-23, a simple way of working...";
+        const message = "Welcome to Issaerium-23, a smart way of working...";
         let i = 0;
         function typeWriter() {
             if (i < message.length) {
