--- a/addrp.html
+++ b/addrp.html
@@ -20,148 +20,148 @@
         }
     </script>
 
-    <style>
-        :root {
-            --bg-color: #1a1a1a;
-            --text-color: #f0f0f0;
-            --primary-color: #4CAF50;
-            --primary-hover: #45a049;
-            --secondary-color: #282c34;
-            --border-color: #555;
-            --modal-bg: rgba(0, 0, 0, 0.4);
-            --modal-content-bg: #282c34;
-            --modal-text-color: #f0f0f0;
-        }
+<style>
+    :root {
+        --bg-color: #1a1a1a;
+        --text-color: #f0f0f0;
+        --primary-color: #4CAF50;
+        --primary-hover: #45a049;
+        --secondary-color: #282c34;
+        --border-color: #555;
+        --modal-bg: rgba(0, 0, 0, 0.4);
+        --modal-content-bg: #282c34;
+        --modal-text-color: #f0f0f0;
+    }
 
-        body {
-            font-family: 'Roboto', sans-serif;
-            background-color: var(--bg-color);
-            color: var(--text-color);
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
+    body {
+        font-family: 'Roboto', sans-serif;
+        background-color: var(--bg-color);
+        color: var(--text-color);
+        margin: 0;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 
-        nav {
-            width: 100%;
-            background-color: var(--secondary-color);
-            color: var(--text-color);
-            padding: 10px 20px;
+    nav {
+        width: 100%;
+        background-color: var(--secondary-color);
+        color: var(--text-color);
+        padding: 10px 20px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
+
+    nav img {
+        height: 40px;
+    }
+
+    nav h1 {
+        margin: 0;
+        font-size: 24px;
+    }
+
+    form {
+        width: 90%;
+        max-width: 600px;
+        padding: 20px;
+        margin: 20px auto;
+        background-color: var(--secondary-color);
+        border-radius: 8px;
+        box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    }
+
+    label {
+        display: block;
+        margin: 15px 0 5px;
+        font-weight: 500;
+        color: var(--text-color);
+    }
+
+    input, select {
+        width: 100%;
+        padding: 10px;
+        margin-top: 5px;
+        border: 1px solid var(--border-color);
+        border-radius: 4px;
+        box-sizing: border-box;
+        font-size: 16px;
+        background-color: var(--bg-color);
+        color: var(--text-color);
+    }
+
+    button {
+        margin-top: 20px;
+        padding: 15px;
+        width: 100%;
+        background-color: var(--primary-color);
+        border: none;
+        border-radius: 4px;
+        color: white;
+        font-size: 16px;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+    }
+
+    button:hover {
+        background-color: var(--primary-hover);
+    }
+
+    .form-column {
+        display: flex;
+        flex-direction: column;
+        margin: 10px 0;
+    }
+
+    @media (min-width: 768px) {
+        #reportForm {
             display: flex;
-            align-items: center;
             justify-content: space-between;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
-
-        nav img {
-            height: 40px;
-        }
-
-        nav h1 {
-            margin: 0;
-            font-size: 24px;
-        }
-
-        form {
-            width: 90%;
-            max-width: 600px;
-            padding: 20px;
-            margin: 20px auto;
-            background-color: var(--secondary-color);
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-        }
-
-        label {
-            display: block;
-            margin: 15px 0 5px;
-            font-weight: 500;
-            color: var(--text-color);
-        }
-
-        input, select {
-            width: 100%;
-            padding: 10px;
-            margin-top: 5px;
-            border: 1px solid var(--border-color);
-            border-radius: 4px;
-            box-sizing: border-box;
-            font-size: 16px;
-            background-color: var(--bg-color);
-            color: var(--text-color);
-        }
-
-        button {
-            margin-top: 20px;
-            padding: 15px;
-            width: 100%;
-            background-color: var(--primary-color);
-            border: none;
-            border-radius: 4px;
-            color: white;
-            font-size: 16px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-
-        button:hover {
-            background-color: var(--primary-hover);
-        }
-
         .form-column {
-            display: flex;
-            flex-direction: column;
-            margin: 10px 0;
+            flex: 1;
+            margin: 0 10px;
         }
+    }
 
-        @media (min-width: 768px) {
-            #reportForm {
-                display: flex;
-                justify-content: space-between;
-            }
-            .form-column {
-                flex: 1;
-                margin: 0 10px;
-            }
-        }
+    .modal {
+        display: none; 
+        position: fixed; 
+        z-index: 1; 
+        left: 0;
+        top: 0;
+        width: 100%; 
+        height: 100%; 
+        overflow: auto; 
+        background-color: var(--modal-bg);
+    }
 
-        .modal {
-            display: none; 
-            position: fixed; 
-            z-index: 1; 
-            left: 0;
-            top: 0;
-            width: 100%; 
-            height: 100%; 
-            overflow: auto; 
-            background-color: var(--modal-bg);
-        }
+    .modal-content {
+        background-color: var(--modal-content-bg);
+        margin: 15% auto; 
+        padding: 20px;
+        border: 1px solid var(--border-color);
+        width: 80%; 
+        color: var(--modal-text-color);
+    }
 
-        .modal-content {
-            background-color: var(--modal-content-bg);
-            margin: 15% auto; 
-            padding: 20px;
-            border: 1px solid var(--border-color);
-            width: 80%; 
-            color: var(--modal-text-color);
-        }
+    .close {
+        color: #aaa;
+        float: right;
+        font-size: 28px;
+        font-weight: bold;
+    }
 
-        .close {
-            color: #aaa;
-            float: right;
-            font-size: 28px;
-            font-weight: bold;
-        }
-
-        .close:hover,
-        .close:focus {
-            color: black;
-            text-decoration: none;
-            cursor: pointer;
-        }
-    </style>
+    .close:hover,
+    .close:focus {
+        color: black;
+        text-decoration: none;
+        cursor: pointer;
+    }
+</style>
 </head>
 <body>
     <nav>
@@ -172,29 +172,32 @@
     <form id="reportForm">
         <div class="form-column">
             <label for="date">Date:</label>
-            <input type="date" id="date" name="date" required>
+            <input type="date" id="date" name="date">
 
             <label for="truckNo">Truck No:</label>
-            <input type="text" id="truckNo" name="truckNo" required>
+            <input type="text" id="truckNo" name="truckNo">
 
             <label for="orderNo">Order No:</label>
-            <input type="text" id="orderNo" name="orderNo" required>
+            <input type="text" id="orderNo" name="orderNo">
 
             <label for="loadingDepot">Loading Depot:</label>
-            <input type="text" id="loadingDepot" name="loadingDepot" required>
+            <input type="text" id="loadingDepot" name="loadingDepot">
         </div>
         <div class="form-column">
             <label for="customerName">Customer's Name:</label>
-            <input type="text" id="customerName" name="customerName" required>
+            <input type="text" id="customerName" name="customerName">
 
             <label for="product">Product:</label>
-            <input type="text" id="product" name="product" required>
+            <input type="text" id="product" name="product">
 
             <label for="volObs">Vol @OBS:</label>
-            <input type="number" id="volObs" name="volObs" required>
+            <input type="number" id="volObs" name="volObs">
 
             <label for="vol20">Vol @20:</label>
-            <input type="number" id="vol20" name="vol20" required>
+            <input type="number" id="vol20" name="vol20">
+
+            <label for="excelFile">Upload Excel File:</label>
+            <input type="file" id="excelFile" name="excelFile" accept=".xlsx, .xls">
             <button type="submit">Submit</button>
         </div>
     </form>
@@ -208,10 +211,11 @@
 
     <script>
         document.getElementById('reportForm').addEventListener('submit', async (e) => {
-            e.preventDefault(); 
+            e.preventDefault();
 
             const db = firebase.firestore(); 
-            const userId = firebase.auth().currentUser.uid; 
+            const storage = firebase.storage();
+            const userId = firebase.auth().currentUser.uid;
 
             const dateString = document.getElementById('date').value;
             const truckNo = document.getElementById('truckNo').value;
@@ -222,24 +226,45 @@
             const volObs = document.getElementById('volObs').value;
             const vol20 = document.getElementById('vol20').value;
 
-            const date = new Date(dateString);
+            const excelFile = document.getElementById('excelFile').files[0];
 
-            try {
-                await db.collection('users').doc(userId).collection('userReports').add({
-                    date: date,
-                    truckNo: truckNo,
-                    orderNo: orderNo,
-                    loadingDepot: loadingDepot,
-                    customerName: customerName,
-                    product: product,
-                    volObs: volObs,
-                    vol20: vol20
-                });
-                console.log("Report saved successfully.");
-                alert("Report saved successfully.");
-                document.getElementById('reportForm').reset();
-            } catch (error) {
-                console.error("Error saving report: ", error);
+            if (excelFile) {
+                // Handle Excel file upload
+                try {
+                    // Upload the Excel file to Firebase Storage
+                    const storageRef = storage.ref().child(`reports/${userId}/${Date.now()}_${excelFile.name}`);
+                    const uploadTask = await storageRef.put(excelFile);
+
+                    console.log("File uploaded successfully.");
+                    alert("File uploaded successfully.");
+                    document.getElementById('reportForm').reset();
+                } catch (error) {
+                    console.error("Error uploading file: ", error);
+                    alert("Error uploading file: " + error.message);
+                }
+            } else if (dateString && truckNo && orderNo && loadingDepot && customerName && product && volObs && vol20) {
+                // Handle form data submission
+                try {
+                    await db.collection('users').doc(userId).collection('userReports').add({
+                        date: new Date(dateString),
+                        truckNo: truckNo,
+                        orderNo: orderNo,
+                        loadingDepot: loadingDepot,
+                        customerName: customerName,
+                        product: product,
+                        volObs: volObs,
+                        vol20: vol20
+                    });
+
+                    console.log("Report saved successfully.");
+                    alert("Report saved successfully.");
+                    document.getElementById('reportForm').reset();
+                } catch (error) {
+                    console.error("Error saving report: ", error);
+                    alert("Error saving report: " + error.message);
+                }
+            } else {
+                alert("Please fill out the form or upload an Excel file.");
             }
         });
     </script>
