--- a/shortages.html
+++ b/shortages.html
@@ -12,53 +12,104 @@
     <script src="config.js"></script>
     <script src="auth.js"></script>
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <!-- Bootstrap CSS and JS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <style>
         body {
             font-family: 'Roboto', sans-serif;
-            background-color: #121212;
-            color: #e0e0e0;
+            background-color: #f8f9fa;
+            color: #333;
         }
         .container {
-            background-color: #1e1e1e;
+            background-color: #ffffff;
             border-radius: 8px;
             padding: 20px;
             margin-top: 20px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
         }
         table {
             width: 100%;
-            border-collapse: collapse;
+            border-collapse: separate;
+            border-spacing: 0;
         }
         th, td {
             padding: 12px;
-            border: 1px solid #444;
-            text-align: left;
+            border: 1px solid #dee2e6;
         }
         th {
-            background-color: #333;
+            background-color: #f8f9fa;
+            font-weight: 600;
+        }
+        .btn-custom {
+            background-color: #007bff;
+            color: white;
+        }
+        .btn-custom:hover {
+            background-color: #0056b3;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Shortage Analysis</h1>
-        <table id="shortageTable">
-            <thead>
-                <tr>
-                    <th>Date</th>
-                    <th>Truck No</th>
-                    <th>Product</th>
-                    <th>Vol @20</th>
-                    <th>Vol Offloaded</th>
-                    <th>Shortage</th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
-            <tbody></tbody>
-        </table>
+        <h1 class="mb-4">Shortage Analysis</h1>
+        <div class="input-group mb-3">
+            <input type="text" class="form-control" id="searchInput" placeholder="Search by Truck No, Product, or Date" aria-label="Search" aria-describedby="searchButton">
+            <button class="btn btn-outline-secondary" id="searchButton" type="button">Search</button>
+        </div>
+        <div class="table-responsive">
+            <table id="shortageTable" class="table table-striped table-hover">
+                <thead class="table-light">
+                    <tr>
+                        <th>Date</th>
+                        <th>Truck No</th>
+                        <th>Product</th>
+                        <th>Vol @20</th>
+                        <th>Offload 1</th>
+                        <th>Offload 2</th>
+                        <th>Offload 3</th>
+                        <th>Total Offloaded</th>
+                        <th>Shortage</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
+        </div>
+    </div>
+
+    <!-- Modal for entering offloaded volumes -->
+    <div class="modal fade" id="offloadModal" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Enter Offloaded Volumes</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="offloadForm">
+                        <div class="mb-3">
+                            <label for="offload1" class="form-label">Offload 1</label>
+                            <input type="number" class="form-control" id="offload1" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="offload2" class="form-label">Offload 2</label>
+                            <input type="number" class="form-control" id="offload2">
+                        </div>
+                        <div class="mb-3">
+                            <label for="offload3" class="form-label">Offload 3</label>
+                            <input type="number" class="form-control" id="offload3">
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" id="saveOffload">Save changes</button>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script>
@@ -87,17 +138,22 @@
                 querySnapshot.forEach((doc) => {
                     const data = doc.data();
                     const row = tableBody.insertRow();
+                    const totalOffloaded = (data.offload1 || 0) + (data.offload2 || 0) + (data.offload3 || 0);
+                    const shortage = data.vol20 - totalOffloaded;
                     row.innerHTML = `
                         <td>${data.date.toDate().toLocaleDateString()}</td>
                         <td>${data.truckNo}</td>
                         <td>${data.product}</td>
                         <td>${data.vol20}</td>
-                        <td>${data.volOffloaded || '-'}</td>
-                        <td>${data.shortage || '-'}</td>
+                        <td>${data.offload1 || '-'}</td>
+                        <td>${data.offload2 || '-'}</td>
+                        <td>${data.offload3 || '-'}</td>
+                        <td>${totalOffloaded || '-'}</td>
+                        <td>${shortage ? shortage.toFixed(2) : '-'}</td>
                         <td>
-                            ${data.volOffloaded ? 
-                                `<button onclick="showTruckDetails('${data.truckNo}')">Details</button>` :
-                                `<button onclick="enterOffloadedVolume('${doc.id}', ${data.vol20})">Offloaded?</button>`
+                            ${totalOffloaded ? 
+                                `<button class="btn btn-sm btn-info" onclick="showTruckDetails('${data.truckNo}')"><i class="fas fa-info-circle"></i> Details</button>` :
+                                `<button class="btn btn-sm btn-primary" onclick="openOffloadModal('${doc.id}', ${data.vol20})"><i class="fas fa-truck-loading"></i> Offloaded?</button>`
                             }
                         </td>
                     `;
@@ -107,18 +163,27 @@
             }
         }
 
-        function enterOffloadedVolume(docId, vol20) {
-            const volOffloaded = prompt("Enter the offloaded volume:");
-            if (volOffloaded !== null && !isNaN(volOffloaded)) {
-                const shortage = vol20 - parseFloat(volOffloaded);
-                updateOffloadedVolume(docId, parseFloat(volOffloaded), shortage);
-            }
+        function openOffloadModal(docId, vol20) {
+            const modal = new bootstrap.Modal(document.getElementById('offloadModal'));
+            modal.show();
+
+            document.getElementById('saveOffload').onclick = function() {
+                const offload1 = parseFloat(document.getElementById('offload1').value) || 0;
+                const offload2 = parseFloat(document.getElementById('offload2').value) || 0;
+                const offload3 = parseFloat(document.getElementById('offload3').value) || 0;
+                const totalOffloaded = offload1 + offload2 + offload3;
+                const shortage = vol20 - totalOffloaded;
+                updateOffloadedVolume(docId, offload1, offload2, offload3, shortage);
+                modal.hide();
+            };
         }
 
-        async function updateOffloadedVolume(docId, volOffloaded, shortage) {
+        async function updateOffloadedVolume(docId, offload1, offload2, offload3, shortage) {
             try {
                 await db.collection('users').doc(firebase.auth().currentUser.uid).collection('userReports').doc(docId).update({
-                    volOffloaded: volOffloaded,
+                    offload1: offload1,
+                    offload2: offload2,
+                    offload3: offload3,
                     shortage: shortage
                 });
                 loadShortageData(firebase.auth().currentUser.uid);
@@ -128,9 +193,54 @@
         }
 
         function showTruckDetails(truckNo) {
-            // Open a new tab with the truck details
             window.open(`truck-details.html?truckNo=${encodeURIComponent(truckNo)}`, '_blank');
         }
+
+        // Search Functionality
+        const searchInput = document.getElementById('searchInput');
+        const searchButton = document.getElementById('searchButton');
+
+        searchButton.addEventListener('click', async () => {
+            const searchTerm = searchInput.value.toLowerCase();
+            const userId = firebase.auth().currentUser.uid;
+            const tableBody = document.querySelector('#shortageTable tbody');
+            tableBody.innerHTML = '';
+
+            try {
+                const querySnapshot = await db.collection('users').doc(userId).collection('userReports').get();
+                querySnapshot.forEach((doc) => {
+                    const data = doc.data();
+                    const truckNo = data.truckNo.toLowerCase();
+                    const product = data.product.toLowerCase();
+                    const dateString = data.date.toDate().toLocaleDateString().toLowerCase();
+
+                    if (truckNo.includes(searchTerm) || product.includes(searchTerm) || dateString.includes(searchTerm)) {
+                        const row = tableBody.insertRow();
+                        const totalOffloaded = (data.offload1 || 0) + (data.offload2 || 0) + (data.offload3 || 0);
+                        const shortage = data.vol20 - totalOffloaded;
+                        row.innerHTML = `
+                            <td>${data.date.toDate().toLocaleDateString()}</td>
+                            <td>${data.truckNo}</td>
+                            <td>${data.product}</td>
+                            <td>${data.vol20}</td>
+                            <td>${data.offload1 || '-'}</td>
+                            <td>${data.offload2 || '-'}</td>
+                            <td>${data.offload3 || '-'}</td>
+                            <td>${totalOffloaded || '-'}</td>
+                            <td>${shortage ? shortage.toFixed(2) : '-'}</td>
+                            <td>
+                                ${totalOffloaded ? 
+                                    `<button class="btn btn-sm btn-info" onclick="showTruckDetails('${data.truckNo}')"><i class="fas fa-info-circle"></i> Details</button>` :
+                                    `<button class="btn btn-sm btn-primary" onclick="openOffloadModal('${doc.id}', ${data.vol20})"><i class="fas fa-truck-loading"></i> Offloaded?</button>`
+                                }
+                            </td>
+                        `;
+                    }
+                });
+            } catch (error) {
+                console.error("Error searching data: ", error);
+            }
+        });
     </script>
 </body>
 </html>
