--- a/truck-details.html
+++ b/truck-details.html
@@ -12,56 +12,73 @@
     <script src="config.js"></script>
     <script src="auth.js"></script>
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-
-    <!-- Chart.js -->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <!-- Bootstrap CSS and JS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <style>
         body {
             font-family: 'Roboto', sans-serif;
-            background-color: #121212;
-            color: #e0e0e0;
+            background-color: #f8f9fa;
+            color: #333;
         }
         .container {
-            background-color: #1e1e1e;
+            background-color: #ffffff;
             border-radius: 8px;
             padding: 20px;
             margin-top: 20px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
         }
         table {
             width: 100%;
-            border-collapse: collapse;
-            margin-top: 20px;
+            border-collapse: separate;
+            border-spacing: 0;
         }
         th, td {
             padding: 12px;
-            border: 1px solid #444;
-            text-align: left;
+            border: 1px solid #dee2e6;
         }
         th {
-            background-color: #333;
+            background-color: #f8f9fa;
+            font-weight: 600;
+        }
+        .summary-card {
+            background-color: #f8f9fa;
+            border-radius: 8px;
+            padding: 20px;
+            margin-bottom: 20px;
+            box-shadow: 0 0 5px rgba(0,0,0,0.05);
+        }
+        .trend-up {
+            color: green;
+        }
+        .trend-down {
+            color: red;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1 id="truckTitle">Truck Details</h1>
-        <canvas id="shortageChart"></canvas>
-        <table id="truckDetailTable">
-            <thead>
-                <tr>
-                    <th>Date</th>
-                    <th>Product</th>
-                    <th>Vol @20</th>
-                    <th>Vol Offloaded</th>
-                    <th>Shortage</th>
-                </tr>
-            </thead>
-            <tbody></tbody>
-        </table>
+        <h1 id="truckTitle" class="mb-4">Truck Details</h1>
+        <div id="summaryStats" class="summary-card"></div>
+        <div class="table-responsive">
+            <table id="truckDetailTable" class="table table-striped table-hover">
+                <thead class="table-light">
+                    <tr>
+                        <th>Date</th>
+                        <th>Product</th>
+                        <th>Vol @20</th>
+                        <th>Offload 1</th>
+                        <th>Offload 2</th>
+                        <th>Offload 3</th>
+                        <th>Total Offloaded</th>
+                        <th>Shortage</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
+        </div>
     </div>
 
     <script>
@@ -87,65 +104,75 @@
         async function loadTruckDetails(userId, truckNo) {
             const truckTitle = document.getElementById('truckTitle');
             const truckDetailTableBody = document.querySelector('#truckDetailTable tbody');
-            truckTitle.textContent = `Truck No: ${truckNo}`;
+            const summaryStats = document.getElementById('summaryStats');
+            truckTitle.textContent = `Truck Details: ${truckNo}`;
             truckDetailTableBody.innerHTML = '';
+            summaryStats.innerHTML = '';
 
             try {
                 const querySnapshot = await db.collection('users').doc(userId)
                     .collection('userReports')
                     .where('truckNo', '==', truckNo)
-                    .orderBy('date', 'desc')
-                    .limit(30)  // Last 30 trips
                     .get();
 
-                const shortages = [];
-                const labels = [];
-
+                const trips = [];
                 querySnapshot.forEach((doc) => {
                     const data = doc.data();
-                    const row = truckDetailTableBody.insertRow();
-                    row.innerHTML = `
-                        <td>${data.date.toDate().toLocaleDateString()}</td>
-                        <td>${data.product}</td>
-                        <td>${data.vol20}</td>
-                        <td>${data.volOffloaded || '-'}</td>
-                        <td>${data.shortage || '-'}</td>
-                    `;
-
-                    if (data.shortage) {
-                        shortages.push(data.shortage);
-                        labels.push(data.date.toDate().toLocaleDateString());
-                    }
+                    trips.push({
+                        date: data.date.toDate(),
+                        product: data.product,
+                        vol20: data.vol20,
+                        offload1: data.offload1 || 0,
+                        offload2: data.offload2 || 0,
+                        offload3: data.offload3 || 0,
+                        totalOffloaded: (data.offload1 || 0) + (data.offload2 || 0) + (data.offload3 || 0),
+                        shortage: data.vol20 - ((data.offload1 || 0) + (data.offload2 || 0) + (data.offload3 || 0))
+                    });
                 });
 
-                createShortageChart(labels.reverse(), shortages.reverse());
+                // Sort trips by date (most recent first) and limit to 30
+                trips.sort((a, b) => b.date - a.date);
+                const recentTrips = trips.slice(0, 30);
+
+                // Calculate summary statistics
+                const totalTrips = recentTrips.length;
+                const totalShortage = recentTrips.reduce((sum, trip) => sum + trip.shortage, 0);
+                const averageShortage = totalShortage / totalTrips;
+                const recentTrend = recentTrips[0].shortage < averageShortage ? 'down' : 'up';
+
+                // Display summary statistics
+                summaryStats.innerHTML = `
+                    <h4>Summary Statistics (Last ${totalTrips} Trips)</h4>
+                    <p><strong>Total Trips:</strong> ${totalTrips}</p>
+                    <p><strong>Total Shortage:</strong> ${totalShortage.toFixed(2)}</p>
+                    <p><strong>Average Shortage:</strong> ${averageShortage.toFixed(2)}</p>
+                    <p><strong>Recent Trend:</strong> 
+                        <span class="trend-${recentTrend}">
+                            ${recentTrend === 'up' ? '↑ Increasing' : '↓ Decreasing'}
+                        </span>
+                    </p>
+                `;
+
+                // Populate table
+                recentTrips.forEach((trip) => {
+                    const row = truckDetailTableBody.insertRow();
+                    row.innerHTML = `
+                        <td>${trip.date.toLocaleDateString()}</td>
+                        <td>${trip.product}</td>
+                        <td>${trip.vol20}</td>
+                        <td>${trip.offload1 || '-'}</td>
+                        <td>${trip.offload2 || '-'}</td>
+                        <td>${trip.offload3 || '-'}</td>
+                        <td>${trip.totalOffloaded || '-'}</td>
+                        <td>${trip.shortage ? trip.shortage.toFixed(2) : '-'}</td>
+                    `;
+                });
+
             } catch (error) {
                 console.error("Error loading truck details: ", error);
+                truckDetailTableBody.innerHTML = '<tr><td colspan="8" class="text-center">Error loading truck details. Please try again later.</td></tr>';
+                summaryStats.innerHTML = '<p class="text-center">Error loading summary statistics.</p>';
             }
-        }
-
-        function createShortageChart(labels, shortages) {
-            const ctx = document.getElementById('shortageChart').getContext('2d');
-            new Chart(ctx, {
-                type: 'line',
-                data: {
-                    labels: labels,
-                    datasets: [{
-                        label: 'Shortage',
-                        data: shortages,
-                        borderColor: 'rgb(75, 192, 192)',
-                        tension: 0.1
-                    }]
-                },
-                options: {
-                    responsive: true,
-                    scales: {
-                        y: {
-                            beginAtZero: true
-                        }
-                    }
-                }
-            });
         }
     </script>
 </body>
